[package]
name = "llm-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
hound = "3.5.1"
byteorder = "1.5.0"
thiserror = "1.0.60"
lazy_static = "1.2.0"
galois = {path = "../galois", version = "0.1.0"}
num-traits = "0.2.15"
memmap2 = "0.9.0"
rand = { version = "0.9.0", default-features = false, features = ["alloc", "thread_rng"] } 
fancy-regex = "0.14.0"